--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "require": {
     "php": "^8.3",
     "tuupola/branca": "^2.3",
-    "illuminate/support": "^10"
+    "illuminate/support": "^10|^11"
   },
   "autoload": {
     "psr-4": {
